tests/liquid/neg/list05-bad.js
/*@ hop :: (list [{v:number| 0 < v}] + null) => list [{v:number| 10 < v}] */
function hop(xs){
  return xs;
}

